--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
   <div class="wrapper">
     <div class="container">
       <h1>Little Miss Dandelion</h1>
-      <h2>AKA Roadkill Raccoon</h2>
-      <p class="bio">Little🤏,Transgender🏳️‍⚧️, Transhuman🧬, Autismic♾️, Closed Poly. She/Her They/Them. ACAB. </p>
+      <p class="bio">Non-Binary ⚥ (She/Her They/Them)</p>
+      <p class="bio">Little🤏,Transgender🏳️‍⚧️, Transhuman🧬, Neurodivergent♾️, Closed Polyamorous💞.</p>
 
-      <a href="https://youtube.com" class="link" target="_blank" rel="noopener noreferrer">
+      <a href="https://t.me/lilmissdandelion" class="link" target="_blank" rel="noopener noreferrer">
         <img src="telegram.png" alt="Telegram">
         Telegram
       </a>
@@ -156,6 +156,7 @@
         <img src="bluesky.png" alt="Bluesky">
         Bluesky
       </a>
+      <!--
       <a href="https://instagram.com" class="link" target="_blank" rel="noopener noreferrer">
         <span class="material-icons">photo_camera</span>
         Instagram
@@ -165,6 +166,7 @@
         GitHub
       </a>
     </div>
+    -->
 <!--
     <div class="container">
       <img src="https://via.placeholder.com/100" alt="Avatar" class="avatar" />
@@ -175,7 +177,7 @@
 -->
 
   <script>
-    const emojis = ['🦝', '🌼','🦁'];
+    const emojis = ['🍬', '🍭', '🍫', '🌈'];
     const emojiBg = document.getElementById('emoji-background');
 
     function createEmojiGrid() {
